# moojelly

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  common.h  courses.h  emu.cpp  emu.h  gui.cpp  gui.fbp  gui.h  image.cpp  image.h  main.cpp  main.h  moojelly.cbp  sml.cpp  sml.h  sml2.cpp  sml2.h  sml3.cpp  sml3.h
.github/workflows/: cmake.yml
